# WashLink

./: AGENT.md  README.md  index.html  package-lock.json  package.json  render.yaml
backend/: .env.sample  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/routers/: __init__.py  bookings.py  health.py  profiles.py  shops.py  workers.py
backend/app/api/dependencies/: bookings.py  onboarding.py  profiles.py  shops.py  workers.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  booking.py  location.py  onboarding.py  pricing.py  profile.py  shop.py  worker.py
backend/app/repositories/: booking_repository.py  onboarding_repository.py  profile_repository.py  shop_repository.py  worker_repository.py
backend/app/schemas/: booking.py  health.py  onboarding.py  profile.py  shop.py  worker.py
backend/app/services/: booking_service.py  health_service.py  onboarding_service.py  profile_service.py  shop_service.py  worker_service.py
backend/documentation/: ARCHITECTURE.md
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 0001_create_initial_schema.py
backend/scripts/: seed_initial_data.py
backend/tests/: test_bookings.py  test_health.py  test_routes.py
docs/: AI_AGENT_RULES.md  AI_RULES.md  API_STANDARDS.md  ARCHITECTURE.md  ENGINEERING_STANDARDS.md  FOLDER_STRUCTURE.md  FRONTEND_UI_UX_STANDARDS.md  MOBILE_ARCHITECTURE.md  PERFORMANCE_SECURITY.md
frontend/: README.md  (+5 more)
(+206 files in other folders)
