[project]
name = "washlink-backend"
version = "0.1.0"
description = "WashLink backend API for booking operations and AI processing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "psycopg[binary]>=3.2.0",
    "asyncpg>=0.28.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.22.0",
    "mypy>=1.7.0",
    "ruff>=0.0.0",
    "black>=24.0.0",
    "pre-commit>=4.0.0",
]
[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"
